# projects

./: .gitignore
pixelx/depsrc/glgooey/libs/glgooey/: BasicButton.cpp  BasicButtonGroup.cpp  BoxLayouter.cpp  Button.cpp  CheckBox.cpp  CheckBoxGroup.cpp  Color.cpp  ComboBox.cpp  ComplexGridLayouter.cpp  Dock.cpp  Dock.h  EditField.cpp  FlowLayouter.cpp  FrameWindow.cpp  GridLayouter.cpp  KeyMessage.cpp  KeyMessage.h  ListBox.cpp  ListControl.cpp  ListWindow.cpp  Makefile.am  Makefile.in  Message.cpp  MessageListener.cpp  MouseMessage.cpp  MultiTextButton.cpp  Panel.cpp  ProgressBar.cpp  PropertyScheme.cpp  Renderer.cpp  ScrollBar.cpp  Slideable.cpp  SlideableMessage.h  Slider.cpp  SolidSurfaceDesc.cpp  SpinBox.cpp  SpinBox.h  StaticText.cpp  TimeManager.cpp  Timer.cpp  (+3 more)
pixelx/depsrc/glgooey/libs/glgooey/core/: Makefile.am  Makefile.in  Position.h  Position.inl  Rectangle.cpp  Rectangle.h  Serialization.cpp  Serialization.h  StandardException.h  Utils.cpp  Utils.h  Vector2.cpp  Vector2.h  Vector2.inl  XMLInputArchive.cpp  XMLInputArchive.h  XMLOutputArchive.cpp  tinyxml.cpp
pixelx/depsrc/glgooey/libs/glgooey/services/: Makefile.am  Makefile.in
pixelx/depsrc/glgooey/libs/glgooey/services/devILImage/: DevILImage.cpp  DevILImage.h  Makefile.am  Makefile.in  il_wrap.cpp
pixelx/depsrc/glgooey/libs/glgooey/services/glfont/: FreeType.cpp  GLTextRenderer.cpp  Makefile.am  Makefile.in  TypeFace.cpp
pixelx/depsrc/glgooey/libs/glgooey/services/interfaces/: Makefile.am  Makefile.in
pixelx/depsrc/glgooey/libs/glgooey/services/nilImage/: Makefile.am  Makefile.in  NilImage.cpp  (+1 more)
(+837 files in other folders)
