INCLUDES = -I$(top_srcdir)/libs
METASOURCES = AUTO
SUBDIRS = services core
lib_LIBRARIES =  libglgooey.a
libglgooey_a_SOURCES = BasicButton.cpp BasicButtonGroup.cpp Button.cpp CheckBox.cpp CheckBoxGroup.cpp Color.cpp ComboBox.cpp ComplexGridLayouter.cpp Dock.cpp EditField.cpp FlowLayouter.cpp FrameWindow.cpp GridLayouter.cpp KeyMessage.cpp ListBox.cpp ListControl.cpp ListWindow.cpp Message.cpp MouseMessage.cpp MultiTextButton.cpp Panel.cpp ProgressBar.cpp PropertyScheme.cpp Renderer.cpp ScrollBar.cpp Slideable.cpp Slider.cpp SolidSurfaceDesc.cpp SpinBox.cpp StaticText.cpp TimeManager.cpp Timer.cpp Window.cpp WindowManager.cpp BoxLayouter.cpp
noinst_HEADERS =  BoxLayouter.h
