INCLUDES = -I$(top_srcdir)/libs
METASOURCES = AUTO
lib_LIBRARIES =  libcore.a
libcore_a_SOURCES = Rectangle.cpp Vector2.cpp Utils.cpp XMLInputArchive.cpp tinystr.cpp tinyxml.cpp tinyxmlerror.cpp tinyxmlparser.cpp XMLOutputArchive.cpp Serialization.cpp
noinst_HEADERS = Position.h Position.inl Vector2.h Vector2.inl Alignment.h Serialization.h tinystr.h tinyxml.h XMLInputArchive.h Enumeration.h
